# dotfiles

./: .gitignore  .marksman.toml  .moxide.toml  readme.md
cli-tools/debug-keymap-issues/: printkey.ps1  readme.md  set_powershell_shell.lua
cli-tools/jupytext_venv/: requirements.txt  setup_venv.ps1
cli-tools/neovim_remote_plugin_python_venv/: requirements.txt  setup_venv.ps1
cli-tools/prettier/: package-lock.json  package.json
cli-tools/stackcollapse-chrome-tracing/: stackcollapse-chrome-tracing.py
git/: config  ignore
nvim/: .emmyrc.json  .stylua.toml  TODO.md  cheatsheet.md  init.lua  lazy-lock.json
nvim/LuaSnip/: all.lua
nvim/after/ftplugin/: gitcommit.lua  markdown.lua  qf.lua
nvim/after/lsp/: apex_ls.lua  csharp_ls.lua  emmylua_ls.lua  jsonls.lua  lua_ls.lua  omnisharp.lua  powershell_es.lua  pyright.lua  readme.md  tablo.lua  taplo.lua  ts_ls.lua  yamlls.lua
nvim/lsp/: jsonls.lua  lua_ls.lua  omnisharp.lua  powershell_es.lua  pyright.lua  readme.md  tablo.lua  ts_ls.lua  yamlls.lua
nvim/lua/: .luarc.json
nvim/lua/config/: autocmd.lua  bufdelete.lua  clipboard.lua  cmds.lua  config.lua  dap.lua  folding.lua  formatter.lua  icons.lua  init.lua  keymaps.lua  lazy.lua  lightbulb.lua  mouse.lua  select.lua  (+4 more)
nvim/lua/ipc_tools/EditorToolsCLI/: pyproject.toml  readme.md
nvim/lua/ipc_tools/EditorToolsCLI/src/: __main__.py
nvim/tests/: quickfix_spec.lua
powershell/: init.ps1  profile.ps1  setup.ps1
powershell/init/: checkhealth.ps1  functions.ps1  gitworktrees.ps1  readline.ps1  rg.ps1
wezterm/: .luarc.json  wezterm.lua
zellij/: config.kdl
(+133 files in other folders)
